legacy fixes, alignment changes
improvements for browsers without vw/vh support

--- a/css/ie-why.css
+++ b/css/ie-why.css
@@ -4,7 +4,6 @@ html, body {
 
 main,
 #about {
-	padding: 50px;
 	width: 100%;
 }
 
