--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@
     padding: 0;
 }
 body {
-    background-color: #FFF;
+    background-color: #FFFFFC;
 }
 h1,
 h2,
@@ -17,27 +17,21 @@ li {
     font-weight: 400;
 }
 h1 {
-    font-size: 12em;
-    font-size: 16vw;
+    font-size: 4em;
+    /*font-size: 16vw;*/
     line-height: 1;
 }
 h2 {
-    color: #fff;
+    color: #FFFFFC;
     font-size: 3.3em;
-    /* font-size: 8vw; */
 }
-p {
-    font-size: 4em;
-    font-size: 5.7vw;
+p , li {
+    font-size: 1.5em;
+    /*font-size: 5.7vw;*/
     margin: .7em 0;
 }
 ul {
     list-style-type: none;
-}
-li {
-    font-size: 4.5em;
-    font-size: 6vw;
-    margin: 0.5em 0;
 }
 li a:active,
 li a:link,
@@ -66,11 +60,14 @@ li a:hover {
     padding: 5vh 0;
     text-align: center;
     width: 80%;
-    width: 80vw;
 }
 main,
 #about {
     align-items: center;
+    display: -webkit-box;
+    display: -moz-box; 
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
     justify-content: center;
     min-height: 100vh;
@@ -85,33 +82,42 @@ main,
 }
 #about .container {
     width: 80%;
-    width: 80vw;
 }
-@media all and (min-width: 50em) {
+@media all and (min-width: 600px) {
     h1 {
-        font-size: 11.3em;
+        font-size: 6em;
         font-size: 15vw;
     }
     h2 {
         font-size: 5.5em;
-        /* font-size: 7.5vw; */
     }
-    p {
-        font-size: 2.3em;
+    p, li {
         font-size: 3.15vw;
     }
+    li {
+        float: left;
+        width: 33%;
+    }
+    #about .container {
+        width: 65%;
+    }
+}
+
+@media all and (min-width: 1024px) {
     ul {
         width: 70%;
         margin: auto;
     }
-    li {
-        float: left;
-        font-size: 2.3em;
-        font-size: 3vw;
-        width: 33%;
-    }
     #about .container {
         width: 50%;
-        width: 50vw;
+    }
+}
+
+@media all and (min-width: 1920px) {
+    h1 {
+        font-size: 18em;
+    }
+    p, li {
+        font-size: 3.75em;
     }
 }
